--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ whispercpp>=0.0.1
 openai>=1.0.0
 elevenlabs>=0.2.26
 python-dotenv>=0.19.0
-keyboard>=0.13.5 
+keyboard>=0.13.5
+beautifulsoup4>=4.9.3
+requests>=2.25.1 
